Notebook with summary

--- a/kaggle-ecommerce-behavior/e_commerce_behavior.ipynb
+++ b/kaggle-ecommerce-behavior/e_commerce_behavior.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -101,14 +101,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "                                                                                \r"
+      "Setting default log level to \"WARN\".\n",
+      "To adjust logging level use sc.setLogLevel(newLevel). For SparkR, use setLogLevel(newLevel).\n",
+      "24/08/13 08:55:54 WARN NativeCodeLoader: Unable to load native-hadoop library for your platform... using builtin-java classes where applicable\n",
+      "24/08/13 08:55:54 WARN Utils: Service 'SparkUI' could not bind on port 4040. Attempting port 4041.\n",
+      "[Stage 1:======================================================>  (41 + 2) / 43]\r"
      ]
     },
     {
@@ -143,16 +147,24 @@
       "only showing top 20 rows\n",
       "\n"
      ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "                                                                                \r"
+     ]
     }
    ],
    "source": [
     "# Import SparkSession\n",
+    "import pandas as pd\n",
     "from pyspark.sql import SparkSession\n",
     "from pyspark.sql.types import DateType\n",
     "\n",
     "# Create SparkSession \n",
     "spark = SparkSession.builder \\\n",
-    "      .master(\"local[1]\") \\\n",
+    "      .master(\"local[*]\") \\\n",
     "      .appName(\"e_commerce_behavior\") \\\n",
     "      .getOrCreate() \n",
     "# spark = SparkSession.builder.appName(\"e_commerce_behavior\").config(\"spark.memory.offHeap.enabled\",\"true\").config(\"spark.memory.offHeap.size\",\"10g\").getOrCreate()\n",
@@ -165,18 +177,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "DataFrame[summary: string, event_time: string, event_type: string, product_id: string, category_id: string, category_code: string, brand: string, price: string, user_id: string, user_session: string]"
-      ]
-     },
-     "execution_count": 21,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "root\n",
+      " |-- event_time: string (nullable = true)\n",
+      " |-- event_type: string (nullable = true)\n",
+      " |-- product_id: string (nullable = true)\n",
+      " |-- category_id: string (nullable = true)\n",
+      " |-- category_code: string (nullable = true)\n",
+      " |-- brand: string (nullable = true)\n",
+      " |-- price: string (nullable = true)\n",
+      " |-- user_id: string (nullable = true)\n",
+      " |-- user_session: string (nullable = true)\n",
+      "\n"
+     ]
     }
    ],
    "source": [
@@ -185,14 +204,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "[Stage 32:=====================================================>  (65 + 1) / 68]\r"
+      "[Stage 6:===================================================>     (61 + 7) / 68]\r"
      ]
     },
     {
@@ -250,18 +269,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "DataFrame[summary: string, event_time: string, event_type: string, product_id: string, category_id: string, category_code: string, brand: string, price: string, user_id: string, user_session: string]"
-      ]
-     },
-     "execution_count": 23,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "root\n",
+      " |-- event_time: string (nullable = true)\n",
+      " |-- event_type: string (nullable = true)\n",
+      " |-- product_id: string (nullable = true)\n",
+      " |-- category_id: string (nullable = true)\n",
+      " |-- category_code: string (nullable = true)\n",
+      " |-- brand: string (nullable = true)\n",
+      " |-- price: string (nullable = true)\n",
+      " |-- user_id: string (nullable = true)\n",
+      " |-- user_session: string (nullable = true)\n",
+      "\n"
+     ]
     }
    ],
    "source": [
@@ -270,21 +296,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "[Stage 36:=====================================================>(109 + 1) / 111]\r"
+      "24/08/13 08:56:09 WARN GarbageCollectionMetrics: To enable non-built-in garbage collector(s) List(G1 Concurrent GC), users should configure it(them) to spark.eventLog.gcMetrics.youngGenerationGarbageCollectors or spark.eventLog.gcMetrics.oldGenerationGarbageCollectors\n",
+      "[Stage 10:=================================================>    (102 + 9) / 111]\r"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "109950743\n"
+      "109950743\n",
+      "root\n",
+      " |-- event_time: string (nullable = true)\n",
+      " |-- event_type: string (nullable = true)\n",
+      " |-- product_id: string (nullable = true)\n",
+      " |-- category_id: string (nullable = true)\n",
+      " |-- category_code: string (nullable = true)\n",
+      " |-- brand: string (nullable = true)\n",
+      " |-- price: string (nullable = true)\n",
+      " |-- user_id: string (nullable = true)\n",
+      " |-- user_session: string (nullable = true)\n",
+      "\n"
      ]
     },
     {
@@ -293,16 +331,6 @@
      "text": [
       "                                                                                \r"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "DataFrame[summary: string, event_time: string, event_type: string, product_id: string, category_id: string, category_code: string, brand: string, price: string, user_id: string, user_session: string]"
-      ]
-     },
-     "execution_count": 24,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -315,7 +343,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -357,7 +385,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -389,7 +417,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -431,14 +459,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "[Stage 53:=====================================================>(110 + 1) / 111]\r"
+      "[Stage 15:==================================================>   (104 + 7) / 111]\r"
      ]
     },
     {
@@ -469,10 +497,156 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[Stage 18:===================================================>  (106 + 5) / 111]\r"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+-------------------+\n",
+      "|        category_id|\n",
+      "+-------------------+\n",
+      "|2085718636156158307|\n",
+      "|2053013556252639687|\n",
+      "|2134905045328592909|\n",
+      "|2137134549706998477|\n",
+      "|2152167773222993940|\n",
+      "|2053013561696846593|\n",
+      "|2053013562250494749|\n",
+      "|2053013555413778833|\n",
+      "|2053013552888807671|\n",
+      "|2075962341790319330|\n",
+      "|2079713983761220055|\n",
+      "|2070004998778912979|\n",
+      "|2053013552603594983|\n",
+      "|2100064858975240628|\n",
+      "|2141229835995840847|\n",
+      "|2053013566587404305|\n",
+      "|2053013564968403895|\n",
+      "|2053013558190408249|\n",
+      "|2053013553140465927|\n",
+      "|2053013555657048481|\n",
+      "+-------------------+\n",
+      "only showing top 20 rows\n",
+      "\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "                                                                                \r"
+     ]
+    }
+   ],
+   "source": [
+    "df_merged_1.select(\"category_id\").distinct().show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[Stage 21:===================================================>  (105 + 6) / 111]\r"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+--------+--------+\n",
+      "|   brand|   count|\n",
+      "+--------+--------+\n",
+      "|    NULL|15331243|\n",
+      "| samsung|13172020|\n",
+      "|   apple|10381933|\n",
+      "|  xiaomi| 7721825|\n",
+      "|  huawei| 2521331|\n",
+      "| lucente| 1840936|\n",
+      "|      lg| 1659394|\n",
+      "|   bosch| 1532149|\n",
+      "|    oppo| 1294585|\n",
+      "|    sony| 1255101|\n",
+      "|    acer| 1127129|\n",
+      "|  lenovo| 1065493|\n",
+      "|cordiant| 1039948|\n",
+      "| respect| 1036498|\n",
+      "|   artel| 1002484|\n",
+      "|      hp|  820594|\n",
+      "| redmond|  741768|\n",
+      "| philips|  738854|\n",
+      "| indesit|  718964|\n",
+      "|dauscher|  706026|\n",
+      "+--------+--------+\n",
+      "only showing top 20 rows\n",
+      "\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "                                                                                \r"
+     ]
+    }
+   ],
+   "source": [
+    "df_merged_1.groupBy(\"brand\").count().sort(\"count\", ascending=False).show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "24/08/13 08:57:00 WARN SparkStringUtils: Truncated the string representation of a plan since it was too large. This behavior can be adjusted by setting 'spark.sql.debug.maxToStringFields'.\n",
+      "[Stage 26:>                                                         (0 + 1) / 1]\r"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+-------+----------+-----------+--------------------+-------------------+--------+---------+------------+--------------------+\n",
+      "|summary|event_type| product_id|         category_id|      category_code|   brand|    price|     user_id|        user_session|\n",
+      "+-------+----------+-----------+--------------------+-------------------+--------+---------+------------+--------------------+\n",
+      "|  count| 109950743|  109950743|           109950743|           74536963|94619500|109950743|   109950743|           109950731|\n",
+      "|    min|      cart|  100000000| 2053013552226107603|    accessories.bag|  a-case|      0.0|   100963605|00000042-3e3f-42f...|\n",
+      "|    25%|      NULL|  1005256.0|2.053013555355058...|               NULL|     NaN|    67.96|5.16262445E8|                NULL|\n",
+      "|    75%|      NULL|1.7200513E7|2.053013563651392...|               NULL|Infinity|   360.11|5.56330356E8|                NULL|\n",
+      "|    max|      view|    9900463| 2187707861038006932|stationery.cartrige|   zyxel|  2574.07|    97129396|fffffde2-4522-4b4...|\n",
+      "+-------+----------+-----------+--------------------+-------------------+--------+---------+------------+--------------------+\n",
+      "\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "                                                                                \r"
+     ]
+    }
+   ],
+   "source": [
+    "df_merged_1.summary(\"count\", \"min\", \"25%\", \"75%\", \"max\").show()"
+   ]
   }
  ],
  "metadata": {
