Notebook draft new version

--- a/kaggle-ecommerce-behavior/e_commerce_behavior.ipynb
+++ b/kaggle-ecommerce-behavior/e_commerce_behavior.ipynb
@@ -645,8 +645,300 @@
     }
    ],
    "source": [
-    "df_merged_1.summary(\"count\", \"min\", \"25%\", \"75%\", \"max\").show()"
+    "# df_merged_1.summary(\"count\", \"min\", \"25%\", \"75%\", \"max\").show()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[Stage 29:>                                                         (0 + 1) / 1]\r"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+-------+---------+\n",
+      "|summary|    price|\n",
+      "+-------+---------+\n",
+      "|  count|109950743|\n",
+      "|    min|      0.0|\n",
+      "|     5%|    18.83|\n",
+      "|    25%|    67.96|\n",
+      "|    75%|   360.11|\n",
+      "|    95%|  1003.85|\n",
+      "|    max|  2574.07|\n",
+      "+-------+---------+\n",
+      "\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "                                                                                \r"
+     ]
+    }
+   ],
+   "source": [
+    "df_merged_1.select(\"price\").summary(\"count\", \"min\", \"5%\", \"25%\", \"75%\", \"95%\", \"max\").show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[Stage 72:==================================================>   (103 + 8) / 111]\r"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1003.85\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "                                                                                \r"
+     ]
+    }
+   ],
+   "source": [
+    "from pyspark.sql.functions import percentile\n",
+    "\n",
+    "price_percentiles = df_merged_1.select(percentile(\"price\", 0.95).alias(\"percentile\")).collect()[0][0]\n",
+    "print(price_percentiles)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[Stage 39:==================================================>   (103 + 8) / 111]\r"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+-----+\n",
+      "|price|\n",
+      "+-----+\n",
+      "|    0|\n",
+      "+-----+\n",
+      "\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "                                                                                \r"
+     ]
+    }
+   ],
+   "source": [
+    "from pyspark.sql.functions import isnan, when, count\n",
+    "\n",
+    "df_merged_1.select(count(when(isnan(\"price\"), \"price\")).alias(\"price\")).show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+----------+----------+----------+-------------------+--------------------+--------+-------+---------+--------------------+\n",
+      "|event_time|event_type|product_id|        category_id|       category_code|   brand|  price|  user_id|        user_session|\n",
+      "+----------+----------+----------+-------------------+--------------------+--------+-------+---------+--------------------+\n",
+      "|2019-10-01|      view|  44600062|2103807459595387724|                NULL|shiseido|  35.79|541312140|72d76fde-8bb3-4e0...|\n",
+      "|2019-10-01|      view|   3900821|2053013552326770905|appliances.enviro...|    aqua|   33.2|554748717|9333dfbd-b87a-470...|\n",
+      "|2019-10-01|      view|   1307067|2053013558920217191|  computers.notebook|  lenovo| 251.74|550050854|7c90fc70-0e80-459...|\n",
+      "|2019-10-01|      view|   1004237|2053013555631882655|electronics.smart...|   apple|1081.98|535871217|c6bd7419-2748-4c5...|\n",
+      "|2019-10-01|      view|   1480613|2053013561092866779|   computers.desktop|  pulser| 908.62|512742880|0d0d91c2-c9c2-4e8...|\n",
+      "|2019-10-01|      view|  17300353|2053013553853497655|                NULL|   creed| 380.96|555447699|4fe811e9-91de-46d...|\n",
+      "|2019-10-01|      view|  31500053|2053013558031024687|                NULL|luminarc|  41.16|550978835|6280d577-25c8-414...|\n",
+      "|2019-10-01|      view|  28719074|2053013565480109009|  apparel.shoes.keds|   baden| 102.71|520571932|ac1cd4e5-a3ce-422...|\n",
+      "|2019-10-01|      view|   1004545|2053013555631882655|electronics.smart...|  huawei| 566.01|537918940|406c46ed-90a4-478...|\n",
+      "|2019-10-01|      view|   2900536|2053013554776244595|appliances.kitche...|elenberg|  51.46|555158050|b5bdd0b3-4ca2-4c5...|\n",
+      "|2019-10-01|      view|   1005011|2053013555631882655|electronics.smart...| samsung| 900.64|530282093|50a293fb-5940-41b...|\n",
+      "|2019-10-01|      view|   3900746|2053013552326770905|appliances.enviro...|   haier| 102.38|555444559|98b88fa0-d8fa-4b9...|\n",
+      "|2019-10-01|      view|  44600062|2103807459595387724|                NULL|shiseido|  35.79|541312140|72d76fde-8bb3-4e0...|\n",
+      "|2019-10-01|      view|  13500240|2053013557099889147|furniture.bedroom...|     brw|  93.18|555446365|7f0062d8-ead0-4e0...|\n",
+      "|2019-10-01|      view|   1801995|2053013554415534427|electronics.video.tv|   haier| 193.03|537192226|e3151795-c355-4ef...|\n",
+      "|2019-10-01|      view|  10900029|2053013555069845885|appliances.kitche...|   bosch|  58.95|519528062|901b9e3c-3f8f-414...|\n",
+      "|2019-10-01|      view|   1306631|2053013558920217191|  computers.notebook|      hp| 580.89|550050854|7c90fc70-0e80-459...|\n",
+      "|2019-10-01|      view|   1005135|2053013555631882655|electronics.smart...|   apple|1747.79|535871217|c6bd7419-2748-4c5...|\n",
+      "|2019-10-01|      view|   1003306|2053013555631882655|electronics.smart...|   apple| 588.77|555446831|6ec635da-ea15-4a5...|\n",
+      "|2019-10-01|      view|   4803399|2053013554658804075|electronics.audio...|     jbl|  33.21|555428858|8a6afed4-77f8-40c...|\n",
+      "+----------+----------+----------+-------------------+--------------------+--------+-------+---------+--------------------+\n",
+      "only showing top 20 rows\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "df_merged_2 = df_merged_1.na.drop(subset=[\"brand\"])\n",
+    "df_merged_2.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[Stage 48:===================================================>  (106 + 5) / 111]\r"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+--------+--------+\n",
+      "|   brand|   count|\n",
+      "+--------+--------+\n",
+      "| samsung|13172020|\n",
+      "|   apple|10381933|\n",
+      "|  xiaomi| 7721825|\n",
+      "|  huawei| 2521331|\n",
+      "| lucente| 1840936|\n",
+      "|      lg| 1659394|\n",
+      "|   bosch| 1532149|\n",
+      "|    oppo| 1294585|\n",
+      "|    sony| 1255101|\n",
+      "|    acer| 1127129|\n",
+      "|  lenovo| 1065493|\n",
+      "|cordiant| 1039948|\n",
+      "| respect| 1036498|\n",
+      "|   artel| 1002484|\n",
+      "|      hp|  820594|\n",
+      "| redmond|  741768|\n",
+      "| philips|  738854|\n",
+      "| indesit|  718964|\n",
+      "|dauscher|  706026|\n",
+      "|    asus|  686029|\n",
+      "+--------+--------+\n",
+      "only showing top 20 rows\n",
+      "\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "                                                                                \r"
+     ]
+    }
+   ],
+   "source": [
+    "df_merged_2.groupBy(\"brand\").count().sort(\"count\", ascending=False).show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "root\n",
+      " |-- event_time: date (nullable = true)\n",
+      " |-- event_type: string (nullable = true)\n",
+      " |-- product_id: string (nullable = true)\n",
+      " |-- category_id: string (nullable = true)\n",
+      " |-- category_code: string (nullable = true)\n",
+      " |-- brand: string (nullable = true)\n",
+      " |-- price: double (nullable = true)\n",
+      " |-- user_id: string (nullable = true)\n",
+      " |-- user_session: string (nullable = true)\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "df_merged_2.printSchema()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[Stage 77:>                                                         (0 + 1) / 1]\r"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+-------+--------+\n",
+      "|summary|   price|\n",
+      "+-------+--------+\n",
+      "|  count|89507086|\n",
+      "|    min|    0.77|\n",
+      "|     5%|   20.57|\n",
+      "|    25%|   69.24|\n",
+      "|    75%|  334.34|\n",
+      "|    95%|  771.96|\n",
+      "|    max| 1003.84|\n",
+      "+-------+--------+\n",
+      "\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "                                                                                \r"
+     ]
+    }
+   ],
+   "source": [
+    "# from pyspark.sql.functions import min\n",
+    "df_merged_3 = df_merged_2.where((df_merged_2.price != 0.0) & (df_merged_2.price < price_percentiles))\n",
+    "# df_merged_3.select(min(df_merged_3.price)).show()\n",
+    "df_merged_3.select(\"price\").summary(\"count\", \"min\", \"5%\", \"25%\", \"75%\", \"95%\", \"max\").show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
